
2023-10-17  David Declerck <david.declerck@ocamlpro.com>

	BUG #923: generated modules init/clear unused decimal constants
	* codegen.c (literal_list): removal of the unused x field,
	  and type moved to tree.h
	* tree.h (struct cb_program): new decimal_constant field
	  to store decimal constants used by the current program,
	* codegen.c (cb_cache_program_decimal_constant): new function
	  that adds constants used by the current program to the new
	  decimal_constant field in struct cb_prog
	* codegen.c (cb_lookup_literal): added the current program as
	  argument to cb_lookup_literal to account for different
	  usage contexts (parse/typecheck vs codegen)
	* codegen.c (output_internal_function): iterate over
	  prog->decimal_constants instead of literal_cache so as to only
	  output decimal constants actually used by the current program
	* typeck.c (decimal_expand, cb_build_cond_fields),
	  codegen.c (output_param) : pass current_program to cb_lookup_literal

	BUG #917: segfault on decimal constant after CANCEL on subprogram
	* codegen.c (codegen_internal, codegen_finalize): move declaration
	  of decimal constants from global storage to local storage

2023-10-02  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* error.c (print_error_prefix), flag.def: new flag
	  -fdiagnostics-absolute-paths to print the full path of
	  a file for diagnostics; this flag can be activated if
	  your editor and build system do not correctly work
	  together to locate files from diagnostic output

2023-09-12  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (literal_list): removed self-reference as tree
	* replace.c (ppecho_replace): now inline
	* replace.c (cb_free_replace): removed setting child to zero before free
	* replace.c: style adjustment

2023-09-07  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_converting): protoype (disabled) to pre-generate
	  conversion table and call new function cob_inspect_translating instead