@@ -2180,7 +2180,8 @@ clean_up_intermediates (struct filename *fn, const int status)
 	if (fn->need_preprocess
 	 && (status
 		||  cb_compile_level > CB_LEVEL_PREPROCESS
-		|| (cb_compile_level == CB_LEVEL_PREPROCESS && save_temps))) {
+		|| (cb_compile_level == CB_LEVEL_PREPROCESS
+		    && save_temps && !save_temps_dir))) {
 		cobc_check_action (fn->preprocess);
 	}
 	/* CHECKME: we had reports of unexpected intermediate
@@ -2287,7 +2288,8 @@ cobc_clean_up (const int status)
 		if (fn->need_assemble
 		 && (status
 			||  cb_compile_level > CB_LEVEL_ASSEMBLE
-			|| (cb_compile_level == CB_LEVEL_ASSEMBLE && save_temps))) {
+			|| (cb_compile_level == CB_LEVEL_ASSEMBLE
+			    && save_temps && !save_temps_dir))) {
 			cobc_check_action (fn->object);
 		}
 		clean_up_intermediates (fn, status);
